--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=System.getenv("MONGODB_URI")
-app.secret=System.getenv("SECRET")
+spring.data.mongodb.uri=${{MONGODB_URI}}
+app.secret=${{SECRET}}
